MJ 19/01/08
- Changed default of parameter "maxsize" in DynamicNetwork and
  OscillatingNetwork. Now the default is: no limit on the size.
- Changed confusing parameter name "network.maxSize" to
  "network.initialCapacity".
- Fixed a bug in Network.setCapacity: now it removes nodes correctly.

AM 24/12/2007
VERSION 1.0.3 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

AM 18/12/07
- Reverted peersim.core.Scheduler to 1.19 version (removing Spyros
  changes), but adding the control to avoid at and step/from/until
  at the same time.

MJ 08/12/07
- Fixed RandRemoval: now it accepts parameter "n=1" (credits to Norbert
  Tolgyesi for spotting this)

MJ 04/11/07
- The previous fix by Spyros for wireRingLattice introduced and
  inconsistency between the documentation and the behavior of the method.
  Documentation (and therefore the interface specification) is now changed,
  consistent with the new behavior. (Also simplified the implementation)
- Added a sensible error message when an event has null destination
  (uninformative error message detected by sourceforge user "pemf")

SV 15/07/2007
- Corrected small bug in GraphFactory.wireRingLattice giving wrong number of
  neighbors for odd k.
- Corrected tiny bug in EDSimulator.nextExperiment ensuring that 8<=rbits<64.

SV 18/05/2007
- Updated core.Scheduler, to allow more flexible schedules.
  It is now possible to define final-only schedules. For ED, simply
  define "FINAL", but not "step". For CD, define "FINAL", and "at -1", or
  "until -1".
- Added more checking in core.Scheduler. An exception is thrown if "at" and
  "from", "until", or "step" are defined at the same time. In ED it is possible
  to omit "step", in order to define final-only schedules. But if "from" or
  "until" are defined while "step" is missing, a warning will be printed.
  A warning will also print if the defined schedule results in no single
  execution.