@@ -1,3 +1,9 @@
+AM 04/02/08
+- Solved a bug in phase management for both cd and ed
+  simulations: at the end of a simulation, phase is set
+  to POST_SIMULATION and never gets back to UNKNOWN_PHASE.
+  (Credits to Alessandro Russo)
+
 MJ 19/01/08
 - Changed default of parameter "maxsize" in DynamicNetwork and
   OscillatingNetwork. Now the default is: no limit on the size.
